[metadata]
name = roraima
summary = Identity and Access Management Service
description_file =
    README.md
author = WenRui Gong
author_email = gongwr@qq.com
home_page = https://gongwr.com/roraima/latest/
python_requires = >=3.9
classifier =
    Environment :: Linux
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Proprietary Software
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/roraima = etc/roraima-api.conf
packages =
    roraima

[entry_points]
console_scripts =
    roraima-api = roraima.cmd.api:main
oslo.config.opts =
    roraima.api = roraima.opts:list_api_opts
oslo.config.opts.defaults =
    roraima.api = roraima.common.config:set_config_defaults

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

